Fix z-index backdrop and modal with popover/tooltip example

--- a/assets/scss/_component-examples.scss
+++ b/assets/scss/_component-examples.scss
@@ -287,7 +287,16 @@
 
 .modal.show {
   z-index: 1072;
+
+  .tooltip, .popover {
+    z-index: 1073;
+  }
 }
+
+.modal-backdrop {
+  z-index: 1071;
+}
+
 
 // Example tabbable tabs
 .bd-example-tabs .nav-tabs {
